@@ -1,5 +1,12 @@
 2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
+	* src/av-cp/playlist-treeview.c:
+
+	Item selection sets the URI on the renderer if it's in PLAYING/PAUSED
+	state.
+
+2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
 	* src/av-cp/renderer-controls.c:
 
 	Make the AV URI setting function more:
